BUG FIXES
- products in cart which are deleted by admin
- if a product has no image undefined error in cart
- profile fields label overlapping

--- a/client/src/containers/Profile/Profile.scss
+++ b/client/src/containers/Profile/Profile.scss
@@ -32,7 +32,7 @@ button{
     margin: 1em 1em 3em 1em;
 
     label:not(.Mui-focused){
-        opacity: 0.1;
+        opacity: 0.5;
     }
 
     header{
